testdata/golden/sema/valid/generic_type_box.fmt
// scenario: generic record type instantiated with concrete types
type Box<T> = {
    value: T,
};

fn make_boxes() {
    let int_box: Box<int> = { value: 1 };
    let str_box: Box<string> = { value: "hi" };
    let _value_int: int = int_box.value;
    let _value_str: string = str_box.value;
}
