testdata/golden/sema/invalid/erring_anonymous_struct_requires_type.fmt
// scenario: anonymous struct literal assigned to Erring must name the error type
fn usage() {
    let result: Erring<int, Error> = { message: "boom", code: 1:uint };
}
